p3/confs/app/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: playground-deployment
  namespace: dev
  labels:
    app: playground
spec:
  replicas: 1
  selector:
    matchLabels:
      app: playground
  template:
    metadata:
      labels:
        app: playground
    spec:
      containers:
      - name: playground
        image: wil42/playground:v2
        ports:
        - containerPort: 8888
