p3/confs/app/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: playground-service
  namespace: dev
spec:
  selector:
    app: playground
  ports:
    - protocol: TCP
      port: 8888
      targetPort: 8888
  type: ClusterIP
